bdr.BDR2.scala.error
Erreur de compilation :
BDR2:19: error: '=>' expected but '}' found.
  }
  ^