bdr.BDR2.scala.code
while(estSurMessage){
  lisMessage() match{
    case "A" => avance()
    case "B" => avance(2)
    case "C" => avance(3)
    case "D" => avance(4)
    case "E" => avance(5)
    case "F" => avance(6)
    case "R" => droite(); avance();
    case "L" => gauche(); avance();
    case "I" => droite(); droite(); avance();
    case "Z" => recule()
    case "Y" => recule(2)
    case "X" => recule(3)
    case "W" => recule(4)
    case "V" => recule(5)
    case "U" => recule(6)
    case _
  }
}